--- a/index.html
+++ b/index.html
@@ -7,12 +7,27 @@
  <title>Portfolio</title>
 </head>
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+ rel="stylesheet">
+<link rel="stylesheet" href="styles/portfolio.css">
 
 
-<body>
+<body class="open-sans-normal">
 
  <header>
+  <nav>
+   <h3 class="nav-title">Ah<span class="text-primary">s</span>an</h3>
 
+   <ul>
+    <li>
+     <a class="dark-2" href="">Portfolio</a>
+    <li><a class="dark-2" href="">Blog</a> </li>
+    <li> <a href=""><button>Hire Me</button></a></li>
+    </li>
+   </ul>
+  </nav>
 
  </header>
 
