Header section done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body class="open-sans-normal">
 
- <header>
+ <header class="header">
   <nav>
    <h3 class="nav-title">Ah<span class="text-primary">s</span>an</h3>
 
@@ -24,11 +24,34 @@
     <li>
      <a class="dark-2" href="">Portfolio</a>
     <li><a class="dark-2" href="">Blog</a> </li>
-    <li> <a href=""><button>Hire Me</button></a></li>
+    <li> <a href=""><button class="btn-primary">Hire Me</button></a></li>
     </li>
    </ul>
   </nav>
 
+  <div class="banner">
+   <div class="banner-content">
+    <h4 class="banner-greetings dark-2"> Hi, I am</h4>
+    <h1 class="banner-title">Ahsanul Haque Chowdhury</h1>
+    <p class="banner-description">As an Online Reputation Manager with a background in Software Engineering from
+     Daffodil
+     International University, I
+     specialize in leveraging advanced SEO techniques to enhance and protect the digital presence of my clients. My
+     expertise
+     includes monitoring online narratives, managing social media, and strategically promoting positive content while
+     mitigating negative impacts. Skilled in adjusting web content to optimize search engine rankings, I ensure positive
+     outcomes are the first seen in search results. Committed to continuous professional development, I stay abreast of
+     the
+     latest digital trends and SEO practices to manage and improve online reputations effectively. My role is pivotal in
+     maintaining the integrity and positive image of brands and individuals in the digital world.</p>
+
+
+    <button class="btn-primary">Download CV</button>
+    <button class="btn-primary">Contact</button>
+   </div>
+   <img class="banner-profile-pic" src="images/background-img.png" alt="Banner images">
+  </div>
+  </div>
  </header>
 
  <main>
