about section starting

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body class="open-sans-normal">
 
- <header class="header">
+ <header class="header ">
   <nav>
    <h3 class="nav-title">Ah<span class="text-primary">s</span>an</h3>
 
@@ -54,8 +54,20 @@
   </div>
  </header>
 
- <main>
-
+ <main class="secondary-background">
+  <section class="about">
+   <h3 class="section-title">
+    About Me
+   </h3>
+   <p class="section-description">
+    As an Online Reputation Manager, my key skills include: Search Engine Optimization (SEO): Enhancing visibility and
+    ranking of positive content.Content Management: Strategically create and promote content to bolster
+    reputation.Digital
+    Marketing Strategies: Utilizing online tools and platforms to maintain and improve online presence.Web Analytics:
+    Analyzing data to inform and optimize reputation management efforts.Crisis Management: Addressing and mitigating
+    negative online information effectively and promptly.
+   </p>
+  </section>
 
  </main>
 
