--- a/index.html
+++ b/index.html
@@ -55,18 +55,100 @@
  </header>
 
  <main class="secondary-background">
-  <section class="about">
-   <h3 class="section-title">
-    About Me
-   </h3>
-   <p class="section-description">
-    As an Online Reputation Manager, my key skills include: Search Engine Optimization (SEO): Enhancing visibility and
-    ranking of positive content.Content Management: Strategically create and promote content to bolster
-    reputation.Digital
-    Marketing Strategies: Utilizing online tools and platforms to maintain and improve online presence.Web Analytics:
-    Analyzing data to inform and optimize reputation management efforts.Crisis Management: Addressing and mitigating
-    negative online information effectively and promptly.
-   </p>
+
+
+  <section class="about-pad">
+
+   <div class="about-pro-div">
+
+    <div class="about-sub-div">
+     <div>
+
+      <h2 class="about-title">About Me</h2>
+     </div>
+     <div class="about-sec-des">
+      <p>As an Online Reputation Manager, my key skills include: Search Engine Optimization (SEO): Enhancing visibility
+       and
+       ranking of positive content.Content Management: Strategically create and promote content to bolster
+       reputation.Digital
+       Marketing Strategies: Utilizing online tools and platforms to maintain and improve online presence.Web
+       Analytics:
+       Analyzing data to inform and optimize reputation management efforts.Crisis Management: Addressing and mitigating
+       negative online information effectively and promptly.</p>
+     </div>
+
+     <div class="row-4-div">
+      <div class="about-div-name">
+       <p>Name: <br><strong>Ahsanul Haque Chowdhury</strong></p>
+
+      </div>
+      <div class="about-div-name">
+       <p>Email: <br><strong>ahsan.chowdhury202@gmail.com</strong></p>
+
+      </div>
+      <div class="about-div-name">
+       <p>Date of birth: <br> <strong>5th July 2000</strong></p>
+
+      </div>
+      <div class="about-div-name">
+       <p>From: <br> <strong>Dhaka-Bangladesh</strong></p>
+
+      </div>
+     </div>
+
+    </div>
+   </div>
+
+
+
+  </section>
+
+
+  <section class="what-i-do">
+
+   <div class="skill-div">
+    <h3 class="sec-skills-title">What I do</h3>
+    <p class="sec-skills-des">I have more than 10 years experience building software for clients all over the world.
+     Below is a quick overview
+     of my
+     main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online
+     resume
+     and project portfolio.</p>
+   </div>
+
+   <div class="skill-div-box">
+    <div class="skill-div-1">
+     <img class="icon-skills" src="images/icons/js.png" alt="">
+     <h5 class="skill-title">Vanilla JavaScript</h5>
+     <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+      free icons
+      available.
+      Aenean commodo ligula eget dolor.</p>
+    </div>
+    <div class="skill-div-1">
+     <img class="icon-skills" src="images/icons/react.png" alt="">
+     <h5 class="skill-title">React</h5>
+     <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+      free icons available.
+      Aenean commodo ligula eget dolor.</p>
+    </div>
+    <div class="skill-div-1">
+     <img class="icon-skills" src="images/icons/nodejs.png" alt="">
+     <h5 class="skill-title">Node.js</h5>
+     <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+      free icons
+      available.
+      Aenean commodo ligula eget dolor.</p>
+    </div>
+    <div class="skill-div-1">
+     <img class="icon-skills" src="images/icons/mongo.png" alt="">
+     <h5 class="skill-title">MongoDB</h5>
+     <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+      free icons
+      available.
+      Aenean commodo ligula eget dolor.</p>
+    </div>
+   </div>
   </section>
 
  </main>
