Only footer section baki ache

--- a/index.html
+++ b/index.html
@@ -2,161 +2,254 @@
 <html lang="en">
 
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
 </head>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
- rel="stylesheet">
+  rel="stylesheet">
 <link rel="stylesheet" href="styles/portfolio.css">
 
 
 <body class="open-sans-normal">
 
- <header class="header ">
-  <nav>
-   <h3 class="nav-title">Ah<span class="text-primary">s</span>an</h3>
+  <header class="header ">
+    <nav>
+      <h3 class="nav-title">Ah<span class="text-primary">s</span>an</h3>
 
-   <ul>
-    <li>
-     <a class="dark-2" href="">Portfolio</a>
-    <li><a class="dark-2" href="">Blog</a> </li>
-    <li> <a href=""><button class="btn-primary">Hire Me</button></a></li>
-    </li>
-   </ul>
-  </nav>
+      <ul>
+        <li>
+          <a class="dark-2" href="">Portfolio</a>
+        <li><a class="dark-2" href="">Blog</a> </li>
+        <li> <a href=""><button class="btn-primary">Hire Me</button></a></li>
+        </li>
+      </ul>
+    </nav>
 
-  <div class="banner">
-   <div class="banner-content">
-    <h4 class="banner-greetings dark-2"> Hi, I am</h4>
-    <h1 class="banner-title">Ahsanul Haque Chowdhury</h1>
-    <p class="banner-description">As an Online Reputation Manager with a background in Software Engineering from
-     Daffodil
-     International University, I
-     specialize in leveraging advanced SEO techniques to enhance and protect the digital presence of my clients. My
-     expertise
-     includes monitoring online narratives, managing social media, and strategically promoting positive content while
-     mitigating negative impacts. Skilled in adjusting web content to optimize search engine rankings, I ensure positive
-     outcomes are the first seen in search results. Committed to continuous professional development, I stay abreast of
-     the
-     latest digital trends and SEO practices to manage and improve online reputations effectively. My role is pivotal in
-     maintaining the integrity and positive image of brands and individuals in the digital world.</p>
-
-
-    <button class="btn-primary">Download CV</button>
-    <button class="btn-primary">Contact</button>
-   </div>
-   <img class="banner-profile-pic" src="images/background-img.png" alt="Banner images">
-  </div>
-  </div>
- </header>
-
- <main class="secondary-background">
+    <div class="banner">
+      <div class="banner-content">
+        <h4 class="banner-greetings dark-2"> Hi, I am</h4>
+        <h1 class="banner-title">Ahsanul Haque Chowdhury</h1>
+        <p class="banner-description">As an Online Reputation Manager with a background in Software Engineering from
+          Daffodil
+          International University, I
+          specialize in leveraging advanced SEO techniques to enhance and protect the digital presence of my clients. My
+          expertise
+          includes monitoring online narratives, managing social media, and strategically promoting positive content
+          while
+          mitigating negative impacts. Skilled in adjusting web content to optimize search engine rankings, I ensure
+          positive
+          outcomes are the first seen in search results. Committed to continuous professional development, I stay
+          abreast of
+          the
+          latest digital trends and SEO practices to manage and improve online reputations effectively. My role is
+          pivotal in
+          maintaining the integrity and positive image of brands and individuals in the digital world.</p>
 
 
-  <section class="about-pad">
+        <button class="btn-primary">Download CV</button>
+        <button class="btn-primary">Contact</button>
+      </div>
+      <img class="banner-profile-pic" src="images/background-img.png" alt="Banner images">
+    </div>
+    </div>
+  </header>
 
-   <div class="about-pro-div">
+  <main class="secondary-background">
 
-    <div class="about-sub-div">
-     <div>
 
-      <h2 class="about-title">About Me</h2>
-     </div>
-     <div class="about-sec-des">
-      <p>As an Online Reputation Manager, my key skills include: Search Engine Optimization (SEO): Enhancing visibility
-       and
-       ranking of positive content.Content Management: Strategically create and promote content to bolster
-       reputation.Digital
-       Marketing Strategies: Utilizing online tools and platforms to maintain and improve online presence.Web
-       Analytics:
-       Analyzing data to inform and optimize reputation management efforts.Crisis Management: Addressing and mitigating
-       negative online information effectively and promptly.</p>
-     </div>
+    <section class="about-pad">
 
-     <div class="row-4-div">
-      <div class="about-div-name">
-       <p>Name: <br><strong>Ahsanul Haque Chowdhury</strong></p>
+      <div class="about-pro-div">
+
+        <div class="about-sub-div">
+          <div>
+
+            <h2 class="about-title">About Me</h2>
+          </div>
+          <div class="about-sec-des">
+            <p>As an Online Reputation Manager, my key skills include: Search Engine Optimization (SEO): Enhancing
+              visibility
+              and
+              ranking of positive content.Content Management: Strategically create and promote content to bolster
+              reputation.Digital
+              Marketing Strategies: Utilizing online tools and platforms to maintain and improve online presence.Web
+              Analytics:
+              Analyzing data to inform and optimize reputation management efforts.Crisis Management: Addressing and
+              mitigating
+              negative online information effectively and promptly.</p>
+          </div>
+
+          <div class="row-4-div">
+            <div class="about-div-name">
+              <p>Name: <br><strong>Ahsanul Haque Chowdhury</strong></p>
+
+            </div>
+            <div class="about-div-name">
+              <p>Email: <br><strong>ahsan.chowdhury202@gmail.com</strong></p>
+
+            </div>
+            <div class="about-div-name">
+              <p>Date of birth: <br> <strong>5th July 2000</strong></p>
+
+            </div>
+            <div class="about-div-name">
+              <p>From: <br> <strong>Dhaka-Bangladesh</strong></p>
+
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+
+
+    </section>
+
+
+    <section class="what-i-do">
+
+      <div class="skill-div">
+        <h3 class="sec-skills-title">What I do</h3>
+        <p class="sec-skills-des">I have more than 10 years experience building software for clients all over the world.
+          Below is a quick overview
+          of my
+          main technical skill sets and technologies i use. Want to find out more about my experience? Check out my
+          online
+          resume
+          and project portfolio.</p>
+      </div>
+
+      <div class="skill-div-box">
+        <div class="skill-div-1">
+          <img class="icon-skills" src="images/icons/js.png" alt="">
+          <h5 class="skill-title">Vanilla JavaScript</h5>
+          <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+
+            FontAwesome 5
+            free icons
+            available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill-div-1">
+          <img class="icon-skills" src="images/icons/react.png" alt="">
+          <h5 class="skill-title">React</h5>
+          <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+
+            FontAwesome 5
+            free icons available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill-div-1">
+          <img class="icon-skills" src="images/icons/nodejs.png" alt="">
+          <h5 class="skill-title">Node.js</h5>
+          <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+
+            FontAwesome 5
+            free icons
+            available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill-div-1">
+          <img class="icon-skills" src="images/icons/mongo.png" alt="">
+          <h5 class="skill-title">MongoDB</h5>
+          <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+
+            FontAwesome 5
+            free icons
+            available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="exp-sec">
+
+      <h2 class="sum-title">A summary of My Resume</h2>
+
+
+      <div class="sum-title-2sec">
+        <div class="my-edu">
+          <h3 class="edu-div">My Education</h3>
+        </div>
+        <div class="my-edu">
+          <h3 class="exp-div">My Experience</h3>
+        </div>
+      </div>
+
+
+      <div>
+        <div class="edu-exp-div">
+          <div>
+
+            <h4 class="edu-div-title">Master in Computer Engineering </h4>
+            <h4 class="edu-div-sub-title">Harvard University / 2015 - 2017</h4>
+            <p class="edu-div-des">List skill/technologies here. You can change the icon above
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <div>
+            <h4 class="exp-div-title">Sr. Font End Developer</h4>
+            <h4 class="exp-div-sub-title">Apple Inc / 2020 - Current</h4>
+            <p class="exp-div-des">List skill/technologies here. You can change the icon above
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+
+        </div>
+
+        <div class="edu-exp-div">
+          <div>
+
+            <h4 class="edu-div-title">Master in Computer Engineering </h4>
+            <h4 class="edu-div-sub-title">Harvard University / 2015 - 2017</h4>
+            <p class="edu-div-des">List skill/technologies here. You can change the icon above
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+              List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+              available.
+              Aenean commodo ligula eget dolor.
+            </p>
+          </div>
+          <div>
+            <h4 class="exp-div-title">Sr. Font End Developer</h4>
+            <h4 class="exp-div-sub-title">Apple Inc / 2020 - Current</h4>
+            <p class="exp-div-des">List skill/technologies here. You can change the icon above
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+
+        </div>
+        <div class="edu-exp-div">
+          <div>
+
+            <h4 class="edu-div-title">Master in Computer Engineering </h4>
+            <h4 class="edu-div-sub-title">Harvard University / 2015 - 2017</h4>
+            <p class="edu-div-des">List skill/technologies here. You can change the icon above
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <div>
+            <h4 class="exp-div-title">Sr. Font End Developer</h4>
+            <h4 class="exp-div-sub-title">Apple Inc / 2020 - Current</h4>
+            <p class="exp-div-des">List skill/technologies here. You can change the icon above
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+
+        </div>
 
       </div>
-      <div class="about-div-name">
-       <p>Email: <br><strong>ahsan.chowdhury202@gmail.com</strong></p>
-
-      </div>
-      <div class="about-div-name">
-       <p>Date of birth: <br> <strong>5th July 2000</strong></p>
-
-      </div>
-      <div class="about-div-name">
-       <p>From: <br> <strong>Dhaka-Bangladesh</strong></p>
-
-      </div>
-     </div>
-
-    </div>
-   </div>
+    </section>
 
 
 
-  </section>
 
 
-  <section class="what-i-do">
-
-   <div class="skill-div">
-    <h3 class="sec-skills-title">What I do</h3>
-    <p class="sec-skills-des">I have more than 10 years experience building software for clients all over the world.
-     Below is a quick overview
-     of my
-     main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online
-     resume
-     and project portfolio.</p>
-   </div>
-
-   <div class="skill-div-box">
-    <div class="skill-div-1">
-     <img class="icon-skills" src="images/icons/js.png" alt="">
-     <h5 class="skill-title">Vanilla JavaScript</h5>
-     <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
-      free icons
-      available.
-      Aenean commodo ligula eget dolor.</p>
-    </div>
-    <div class="skill-div-1">
-     <img class="icon-skills" src="images/icons/react.png" alt="">
-     <h5 class="skill-title">React</h5>
-     <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
-      free icons available.
-      Aenean commodo ligula eget dolor.</p>
-    </div>
-    <div class="skill-div-1">
-     <img class="icon-skills" src="images/icons/nodejs.png" alt="">
-     <h5 class="skill-title">Node.js</h5>
-     <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
-      free icons
-      available.
-      Aenean commodo ligula eget dolor.</p>
-    </div>
-    <div class="skill-div-1">
-     <img class="icon-skills" src="images/icons/mongo.png" alt="">
-     <h5 class="skill-title">MongoDB</h5>
-     <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
-      free icons
-      available.
-      Aenean commodo ligula eget dolor.</p>
-    </div>
-   </div>
-  </section>
-
- </main>
-
- <footer>
 
 
- </footer>
+
+
+  </main>
+
+  <footer>
+
+
+  </footer>
 
 </body>
 
