--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
         </div>
 
       </div>
+
     </section>
 
 
@@ -251,8 +252,26 @@
 
   </main>
 
-  <footer>
-
+  <footer class="secondary-bg">
+    <div class="footer-column">
+      <h3 class="footer-title">Lets Connect</h3>
+      <p class="footer-description">Please fill out the form on this section to contact with me or call between 9:00 A.M
+        and 8.00 P.M ET, Monday through Friday.</p>
+      <div>
+        <a href=""><img src="images/icons/facebook.png" alt=""></a>
+        <a href=""><img src="images/icons/insta.png" alt=""></a>
+        <a href=""><img src="images/icons/twitter.png" alt=""></a>
+      </div>
+    </div>
+    <div class="footer-column">
+      <h3 class="footer-title">Let’s Message me</h3>
+      <form action="">
+        <input type="text" name="" id="" placeholder="Your name">
+        <input type="email" name="" id="" placeholder="Your email">
+        <textarea name="" id="" rows="10" cols="30" placeholder="Message"></textarea>
+        <input class="btn-primary" type="submit" value="submit">
+      </form>
+    </div>
 
   </footer>
 
